Version 2.47:   ( Wed Jan 21 11:32:24 IST 2009 )
------------------------------------------------

* Fixed bug https://rt.cpan.org/Ticket/Display.html?id=34067 :
- Multiline values returned as array references in tied hash interface
- This was as opposed to the documentation.
- added t/21multiline-values-in-tied.t and fixed some older tests.

* Moved the eval'ed debugging code (_assert_invariants) to its own module, 
without the eval so the perl-5.6.2 will be happy. Now explicitly use'ing it 
from t/lib where appropriate. See for example:
- http://www.nntp.perl.org/group/perl.cpan.testers/2009/01/msg3101788.html

Version 2.46:  ( Sat Jan 17 16:31:52 IST 2009 )
-----------------------------------------------

* Added regression tests for bug #1720915
- https://sourceforge.net/tracker/index.php?func=detail&aid=1720915&group_id=6926&atid=106926
- the bug seems to be fixed in trunk.

* Added a regression test for RT #36584
- https://rt.cpan.org/Ticket/Display.html?id=36584
- the bug seems to be fixed in trunk.

* Added a regression test for RT #36309
- https://rt.cpan.org/Ticket/Display.html?id=36309
- Testing for allowedcommentchars.
- the bug seems to be fixed in trunk.

* Converted t/03comments.t to Test::More and did other cleanups in preparation 
of solving a few bugs.

* Now GetSectionComment does the documented behaviour in scalar context and
returns the string joined by newlines:
- https://rt.cpan.org/Ticket/Display.html?id=8612

* Now GetParameterComment returns the right thing in scalar context (joined
by newlines). It was documented and tested.
- https://rt.cpan.org/Ticket/Display.html?id=8612

Version 2.45:  ( Sat Dec 27 17:21:45 IST 2008 )
-----------------------------------------------

* Fixed bug #1230339:
- https://sourceforge.net/tracker/index.php?func=detail&aid=1230339&group_id=6926&atid=106926
- Can't store and retrive "\nEOT\n"
- Fixed by checking for the existence of the here-doc terminator in the 
string, and if so appending more characters.
