@@ -1,0 +1,6 @@
+[test]
+key1=value1
+key2=value2
+; End Comment 1
+; End Comment 2
+
